--- a/index.html
+++ b/index.html
@@ -56,12 +56,15 @@
       </h1>
 
       <div class="row">
+        <div id="content" class="col-lg-4 col-sm-6 portfolio-item">
+        </div>
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
             <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">Produit One</a>
+                <p> 30 €</p>
               </h4>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
               <button type="button" class="btn btn-primary">Lien</button>
@@ -132,7 +135,7 @@
       <!-- /.row -->
 
       <!-- Pagination -->
-      <ul class="pagination justify-content-center">
+      <ul class="pagination justify-content-center dealabs">
         <li class="page-item">
           <a class="page-link" href="#" aria-label="Previous">
             <span aria-hidden="true">&laquo;</span>
@@ -187,16 +190,21 @@
         .then(($) => {
           var dealList = [];
 
-          $('div .threadGrid').each(function(index, element){
+          $('div [class=threadGrid]').each(function(index, element){
 
             dealList[index] = {};
 
-            dealList[index]['name'] = $('.thread-title').find('.thread-title--list').text();
-            //dealList[index][$('.thread-title').find('.thread-title--list').html()]
+            dealList[index]['name'] = $(this).find('.thread-title--list').text();
+            dealList[index]['description'] = $(this).find('.cept-description-container').text();
+            dealList[index]['price'] = $(this).find('.thread-price').text();
+            dealList[index]['img'] = $(this).find('img').attr('src');
+            dealList[index]['url'] = $(this).find('.thread-title--list').attr('href');
             
+      dealabs ="<div class=\"card h-100\"> <a href="+dealList[index].url+"> <img class=\"card-img-top\" src="+dealList[index].img+" alt=\"> </a> <div class=\"card-body\"> <h4 class=\"card-title\"> <a href="+dealList.url+">"+dealList.name+"</a><p> "+dealList.price+" €</p> </h4><p class=\"card-text\">"+dealList.description+"</p><button type=\"button\" class=\"btn btn-primary\">Lien</button></div></div>";
+          
 
 
-
+              document.getElementById("content").innerHTML = dealabs;
             });
 
           console.log(dealList);
